syntax = "proto3";
package protocol;
option go_package = ".;protocol";

message TransactStart {
	TransactParam MyTNP = 1;
	TransactParam ParenTNP = 2;
	bytes CustomData = 3;
}

message TransactCtrlCmd {
	int64 TId = 1;
	int32 Cmd = 2;
}

message TransactResult {
	int64 MyTId = 1;
	int64 ChildTId = 2;
	int32 RetCode = 3;
	bytes CustomData = 4;
}

message TransactParam {
	int64 TransNodeID = 1;
	int32 TransType = 2;
	int32 OwnerType = 3;
	int32 OwnerID = 4;
	int32 SkeletonID = 5;
	int32 LevelNo = 6;
	int32 AreaID = 7;
	int64 TimeOut = 8;
	int32 TransCommitType = 9;
	int64 ExpiresTs = 10;
}